<resources>
    <string name="app_name">Mini Adda</string>
    <string name="user_title">User Name List</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_profile">Profile</string>
    <string name="sample">
        Learn Spring for Android Application Development by S M Mohi Us Sunnat, Igor Kucherenko.\n
        Build amazing applications with the power of Spring modules and the efficiency of Kotlin
    </string>

    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <string name="title_full_names">Full Name</string>
    <string name="title_email">Email</string>
    <string name="title_contact_number">Contact Number</string>
    <string name="title_country">Country</string>
    <string name="title_created_date">Created Date</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="dialog_title_post">Notes</string>
    <string name="msg_no_post">No post found!</string>
    <string name="lbl_new_post_title">New Post</string>
    <string name="lbl_edit_post_title">Edit Post</string>
    <string name="hint_enter_post">Enter your post!</string>
    <string name="title_password">Password</string>
    <string name="title_first_name">First Name</string>
    <string name="title_last_name">Last Name</string>
    <string name="title_username">Username</string>
    <string name="title_con_password">Confirm Password</string>
    <string name="title_reg">Registration</string>
    <string name="title_already_member">Already Member?</string>


    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_match_password">Password does not match</string>
    <string name="err_login_msg">Wrong username or password. Please Try again</string>
    <string name="title_register">Register</string>
    <string name="title_login">LogIn</string>
    <string name="title_new_member">New Member?</string>

</resources>
