<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorAccentBlue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.RegistrationActivity">
    <!--<android.support.design.widget.FloatingActionButton-->
            <!--android:id="@+id/fabMain"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="bottom|end"-->
            <!--android:layout_margin="@dimen/fab_margin"-->
            <!--app:srcCompat="@drawable/ic_face_white_24dp"-->
            <!--app:backgroundTint="@color/colorAccent"-->
            <!--app:fabSize="normal"-->
            <!--android:layout_marginTop="64dp"-->
            <!--app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"-->
            <!--app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"-->
            <!--app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"-->
            <!--android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintVertical_bias="0.0"/>-->

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:background="@color/reg_body"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="64dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginTop="64dp" android:id="@+id/cardView">

        <ScrollView
                android:id="@+id/ScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintVertical_bias="1.0" android:layout_marginEnd="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="24dp" android:layout_marginBottom="32dp">
                <TextView
                        android:id="@+id/Register_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="Register"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:typeface="monospace" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"/>

                <!--first name-->
                <LinearLayout
                        android:id="@+id/name_title_reg"
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        app:layout_constraintTop_toBottomOf="@+id/Register_tv"
                        android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                        android:layout_marginStart="32dp">
                    <android.support.design.widget.TextInputLayout
                            android:id="@+id/first_name_title_reg"
                            android:layout_centerHorizontal="true"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_marginEnd="8dp"

                            android:layout_height="wrap_content">

                        <EditText
                                android:id="@+id/first_name_input_reg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:textSize="@dimen/reg_font_size"

                                android:hint="@string/title_first_name"
                                android:inputType="text"
                                android:textColor="#000000"
                                android:textStyle="bold"/>

                    </android.support.design.widget.TextInputLayout>

                    <!--last name-->

                    <android.support.design.widget.TextInputLayout
                            android:id="@+id/last_name_title_reg"
                            android:layout_centerHorizontal="true"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <EditText
                                android:id="@+id/last_name_input_reg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:textSize="@dimen/reg_font_size"

                                android:padding="8dp"
                                android:hint="@string/title_last_name"
                                android:inputType="text"
                                android:textColor="#000000"
                                android:textStyle="bold"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <!--username-->

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/username_title_reg"
                        app:layout_constraintTop_toBottomOf="@+id/name_title_reg"
                        android:layout_centerHorizontal="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="32dp" android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp">

                    <EditText
                            android:id="@+id/username_input_reg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:textSize="@dimen/reg_font_size"

                            android:padding="8dp"

                            android:hint="@string/title_username"
                            android:inputType="text"
                            android:textColor="#000000"
                            android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                        android:id="@+id/pass_title_reg"
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/username_title_reg"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                >  <!--password-->
                    <android.support.design.widget.TextInputLayout
                            android:id="@+id/password_title_reg"
                            android:layout_centerHorizontal="true"
                            android:layout_weight="1"
                            android:layout_marginEnd="8dp"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <EditText
                                android:id="@+id/password_input_reg"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="@dimen/reg_font_size"

                                android:hint="@string/title_password"
                                android:padding="8dp"

                                android:inputType="numberPassword"
                                android:textColor="#000000"
                                android:textStyle="bold"/>

                    </android.support.design.widget.TextInputLayout>

                    <!--confirm password-->
                    <android.support.design.widget.TextInputLayout
                            android:id="@+id/con_password_title_reg"
                            android:layout_weight="1"
                            android:layout_centerHorizontal="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <EditText
                                android:id="@+id/con_password_input_reg"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="numberPassword"
                                android:textSize="@dimen/reg_font_size"


                                android:padding="8dp"

                                android:hint="@string/title_con_password"
                                android:textColor="#000000"
                                android:textStyle="bold"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/con_password_title_reg"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"-->
                <!--android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/username_title_reg">-->

                <!--<EditText-->
                <!--android:id="@+id/con_password_input_reg"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:inputType="numberPassword"-->
                <!---->
                <!---->
                <!--android:hint="@string/title_password"-->
                <!--android:textColor="#000000"-->
                <!--android:textStyle="bold"/>-->

                <!--</android.support.design.widget.TextInputLayout>-->

                <!--email-->
                <android.support.design.widget.TextInputLayout
                        android:id="@+id/email_title_reg"
                        android:layout_centerHorizontal="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/pass_title_reg"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp">

                    <EditText
                            android:id="@+id/email_input_reg"
                            android:layout_width="match_parent"
                            android:padding="8dp"
                            android:layout_height="match_parent"
                            android:inputType="textEmailAddress"

                            android:textSize="@dimen/reg_font_size"
                            android:hint="@string/title_email"
                            android:textColor="#000000"
                            android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>

                <!--contact-->
                <android.support.design.widget.TextInputLayout
                        android:id="@+id/contact_title_reg"
                        android:layout_centerHorizontal="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/email_title_reg"
                        app:layout_constraintStart_toStartOf="@+id/country_title_reg"
                        app:layout_constraintEnd_toEndOf="@+id/country_title_reg" android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp">

                    <EditText
                            android:id="@+id/contact_input_reg"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            android:textSize="@dimen/reg_font_size"

                            android:padding="8dp"
                            android:hint="@string/title_contact_number"
                            android:textColor="#000000"
                            android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>

                <!--country-->
                <android.support.design.widget.TextInputLayout
                        android:id="@+id/country_title_reg"
                        android:layout_centerHorizontal="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/contact_title_reg"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp">

                    <EditText
                            android:id="@+id/country_input_reg"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"
                            android:padding="8dp"
                            android:textSize="@dimen/reg_font_size"

                            android:hint="@string/title_country"
                            android:textColor="#000000"
                            android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>

                <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:text="@string/title_reg"
                        android:id="@+id/reg_submit" android:layout_marginTop="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/country_title_reg"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"/>

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/already_reg"
                          android:padding="8dp"
                          android:textSize="@dimen/reg_font_size"
                          android:gravity="center"
                          android:text="@string/title_already_member" android:layout_marginTop="16dp"
                          app:layout_constraintTop_toBottomOf="@+id/reg_submit"
                          app:layout_constraintEnd_toEndOf="parent"
                          android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
                          android:layout_marginStart="32dp" app:layout_constraintBottom_toBottomOf="parent"/>

            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>